smarter code in the mojo and www