@@ -17,7 +17,6 @@ package com.khubla.jvmbasic.jvmbasicwww;
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 import java.io.File;
-import java.io.FileInputStream;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.io.PrintStream;
@@ -110,7 +109,6 @@ public class BASFile {
    /**
     * compile
     */
-   @SuppressWarnings("deprecation")
    private void compile(String classdir) throws Exception {
       try {
          /*
@@ -118,15 +116,20 @@ public class BASFile {
           */
          final JVMBasicCompiler jvmBasicCompiler = new JVMBasicCompiler();
          System.out.println("Compiling '" + basFile.getName() + "'");
-         final byte[] byteCode = jvmBasicCompiler.compile(new FileInputStream(basFile), getClassname(), false);
-         JVMBasicCompiler.writeClassFile(byteCode, getClassname(), classdir);
-         classFile = new File(classdir + "/" + getClassname() + ".class");
+         final String className = jvmBasicCompiler.compileToClassfile(basFile.getName(), classdir, true);
+         classFile = new File(classdir + "/" + className + ".class");
          /*
           * load with the class loader
           */
-         final URL[] urls = new URL[] { new File(classdir).toURL() };
-         final ClassLoader loader = new URLClassLoader(urls);
-         clazz = loader.loadClass(getClassname());
+         final URL[] urls = new URL[] { new URL(new File(classdir).getAbsolutePath()) };
+         final URLClassLoader classLoader = new URLClassLoader(urls);
+         try {
+            clazz = classLoader.loadClass(getClassname());
+         } catch (final Exception e) {
+            throw e;
+         } finally {
+            classLoader.close();
+         }
          if (null == clazz) {
             throw new Exception("Unable to load class '" + getClassname() + "'");
          }
